force-app/main/default/objects/Account/fields/Audit_Filed__c.field-meta.xml
<CustomField>
    <fullName>Audit_Filed__c</fullName>
    <label>Audit_Filed</label>
    <type>Phone</type>
</CustomField>