force-app/main/default/objects/Account/fields/Is_True__c.field-meta.xml
<CustomField>
    <fullName>Is_True__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is True?</label>
    <type>Checkbox</type>
</CustomField>