force-app/main/default/objects/Account/fields/Test_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Field__c</fullName>
    <label>Test Date Field</label>
    <type>Date</type>
</CustomField>