force-app/main/default/objects/Account/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <label>Test Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>