force-app/main/default/objects/Account/fields/Version_Upgrade_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Version_Upgrade_Test_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Version Upgrade Test Field</label>
    <type>Checkbox</type>
</CustomField>